# WuChangSteamAnalysis

./: .gitignore  README.md  pyproject.toml  report_generator.py  review_analyzer.py  sample.env  steam_reviews_collector.py
docs/: index.html
vis_result/: analysis_report.html  analysis_statistics.json
