[tool.poetry]
name = "wuchangsteamanalysis"
version = "0.1.0"
description = "Steam Chinese Reviews Analysis Tool"
authors = ["zhoudaxia"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pandas = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"